# grout

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
benchmarks/: BASELINE.md  README.md  RESULTS.md  aggregate_sweep.py  bench_llama_cpp.py  bench_sglang.py  bench_transformers.py  bench_trtllm.py  bench_vllm.py  gemv_microbench.sh  make_prompts.py  profile_compare.sh  regen_grout.sh  run_all.sh  sweep_pp.sh  sweep_pp_pytorch.sh  sweep_pp_sm100.sh  sweep_pp_sm120.sh  sweep_pp_tile.sh  sweep_tg.sh  sweep_tg_sm100.sh  sweep_tg_sm120.sh  sweep_tg_tile.sh
benchmarks/pytorch/: README.md  combine_prefill.py
benchmarks/pytorch/raw/: grout_sm120_20260630_102311.run.jsonl
benchmarks/pytorch/raw/pytorch_20260630_113859/: aggregate.csv  aggregate.md  run.jsonl
benchmarks/pytorch/raw/pytorch_20260630_113859/prompts/: pp_128.txt  pp_18.txt  pp_2048.txt  pp_512.txt  pp_8192.txt
src/: api.rs  config.rs  cublas.rs  cuda_graph.rs  dequant.rs  flash_decode.rs  gguf.rs  kernels.rs  lib.rs  loader.rs  main.rs  model.rs  quant_scratch.rs  weights.rs
tests/: api_token_validation.rs  dequant.rs  e2e_generation.rs  gguf_integration.rs  kernels.rs
