[package]
name = "grout"
version = "0.1.0"
edition = "2024"

[dependencies]
cuda-async = { git = "https://github.com/NVlabs/cutile-rs" }
cuda-core = { git = "https://github.com/NVlabs/cutile-rs" }
cutile = { git = "https://github.com/NVlabs/cutile-rs" }

anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
cudarc = { version = "0.19.2", default-features = false, features = ["std", "cublas", "dynamic-loading", "cuda-13010"] }
memmap2 = "0.9.10"
rand = "0.8.5"
rayon = "1.11.0"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokenizers = "0.20.4"
candle-core = "0.9.2"
